copy edit and image resize

--- a/labs/add-apic-home/10.md
+++ b/labs/add-apic-home/10.md
@@ -15,7 +15,7 @@ As a result, you may have a home lab, or can build a home lab, which has a good 
 ##  Some Older Devices Work for Some Apps
 Some apps work with older network devices and OS versions. The compatible device lists discussed in the latter parts of this Learning Lab focuses on the compatible devices, but some devices and OS levels still work. In fact, much of the testing done related to this Learning Lab purposefully used:
 
-- ISR G1 routers (1841’s)
+- ISR G1 routers (1841s)
 - 2960 switches
 
 Note that with these older devices and OS versions, the Network Visibility functions (discovery and topology) worked well. However, EasyQoS would not even attempt to configure the devices.
