--- a/labs/add-apic-home/2.md
+++ b/labs/add-apic-home/2.md
@@ -19,16 +19,15 @@ That process should navigate your browser to a page similar to the one shown in 
 ![alt text](/posts/files/home-lab-network/assets/images/apic-3.png)
  
 ## All APIC-EM Labs
-You can also navigate to any DevNet Learning Lab directly, ignoring the Learning Tracks. For instance, to find labs tagged as having some APIC-EM content, you can:
-1.	Browse to learninglabs.cisco.com/labs,  https://learninglabs.cisco.com/labs and then either:
-a.	Type “APIC-EM” in the search box in the upper right
-b.	Click category “APIC-EM” on the left
+You can also navigate to any DevNet Learning Lab directly, ignoring the Learning Tracks. For instance, to find labs tagged as having some APIC-EM content, you can browse to [learninglabs.cisco.com/labs]( https://learninglabs.cisco.com/labs) and then either:
+1. Type “APIC-EM” in the search box in the upper right
+1. Click category “APIC-EM” on the left
 The next figure points out the locations.
 
 ![alt text](/posts/files/home-lab-network/assets/images/apic-4.png)
  
 ## What You Get with Existing DevNet Learning Labs about APIC-EM
-Each of these DevNet Learning Labs gives you a sequence of scripted steps to help you learn something useful, typically in around 20 minutes. Think of them like lab exercises in a class, but also with enough material from the course (words and figures) to go along with the lab activities so that you can do the lab by yourself without any help. 
+Each of these DevNet Learning Labs gives you a sequence of scripted steps to help you learn something useful, typically in around 20 minutes. Think of them like lab exercises in a class, but also with enough material from the course to go along with the lab activities so that you can do the lab by yourself without any help. 
 
 Some of the strengths of the Learning Labs are:
 
