--- a/labs/add-apic-home/3.md
+++ b/labs/add-apic-home/3.md
@@ -1,22 +1,22 @@
 
 # Learning Programmability and APIC-EM with Existing DevNet Sandboxes
-After learning some of the basics in some Learning Labs, most of us then want to go beyond scripted learning: we need a place to have more free play to experiment with different features and functions. DevNet Sandboxes provide just that.
+After learning some of the basics through the Learning Labs, most of us want to go beyond scripted learning: we need a place to have more free play to experiment with different features and functions. DevNet Sandboxes provide just that.
 
 DevNet Sandboxes are lab pods, with both real and virtual instances of various devices, available to anyone can learn and perform experiments. All you need to do is access the Sandbox, first from your web browser, and then sometimes with other tools. The Always-On Sandboxes allow immediate access, whereas Reservation Sandboxes require prior scheduling, particularly those Sandboxes that include real and virtual device instances. 
 
 ![alt text](/posts/files/home-lab-network/assets/images/apic-6.png)
  
-The learning sequence of starting with DevNet Learning Labs, followed by using DevNet Sandboxes, makes perfect sense. You follow the scripted Learning Labs until you feel more comfortable. Then, find a DevNet Sandbox with the related hardware and software, and try your own learning experiments.
+The learning sequence of starting with DevNet Learning Labs followed by using DevNet Sandboxes makes perfect sense. You follow the scripted Learning Labs until you feel more comfortable. Then, find a DevNet Sandbox with the related hardware and software, and try your own learning experiments.
 
 DevNet supports several APIC-EM Sandboxes. For instance, at the time this lab was first published, these APIC-EM Sandboxes were available:
-Database Only, Always On: A Sandbox that uses a database instead of lab gear, with an instance of APIC-EM. You can always access this APIC-EM, and do a subset of functions and API calls. The database option is a method used to create a lab that does not rely on real network device instances, so that the Sandbox can always be available. 
 
+- Database Only, Always On: A Sandbox that uses a database instead of lab gear, with an instance of APIC-EM. You can always access this APIC-EM, and do a subset of functions and API calls. The database option is a method used to create a lab that does not rely on real network device instances, so that the Sandbox can always be available. 
 - Database Only, Reserved: Same idea as the previous Sandbox, with the ability to reserve a timeslot.
 - Hardware Minilab 3: A Sandbox with a small lab pod with three or four switches and a few hosts, with an APIC-EM instance, accessed via a VPN connection to Cisco
 - Hardware Minilab 4: Like Hardware Minilab 3, with a slightly different mix of devices
 - Full Hardware Lab: Again, APIC-EM with a lab, but with an extensive lab, with 30-40 nodes shown. Some are phones, CUCM, other routers and switches, some hosts. 
 
-You can see details about each of the Sandboxes, even without reserving them, at DevNet. For instance, to see details about the full hardware lab, just [click this link](https://devnetsandbox.cisco.com/RM/Diagram/Index/27e2460c-52e9-4f9e-9e2a-7792f1d106d2?diagramType=Topology "Hardware Lab Topology").  
+You can see details about each of the Sandboxes, even without reserving them, on DevNet. For instance, to see details about the full hardware lab, just [click this link](https://devnetsandbox.cisco.com/RM/Diagram/Index/27e2460c-52e9-4f9e-9e2a-7792f1d106d2?diagramType=Topology "Hardware Lab Topology").  
 
 The next figure shows the topology for this Sandbox, with each rectangle with a circle inside representing some device.
 
