--- a/labs/add-apic-home/4.md
+++ b/labs/add-apic-home/4.md
@@ -5,7 +5,7 @@ Before moving on, you should know about two other useful free resources, both de
 ## Cisco dCloud
 The Cisco Demo Cloud, or dCloud, provides a service for demonstrating, experiencing, and learning about some current Cisco products. At its core, dCloud provides lab pods along with scripted demo experiences. Those can be used by Cisco and Channel Partner SEs to demo a Cisco product to a customer, but they can also be used by customers to experience and learn about the product. And it is a free service!
 
-As it turns out, there were not any demos specific to APIC-EM at the time this Learning Lab was released, but you might look there for other related topics, or for demos released after this Learning Lab was released. To learn more about dCloud, and to search for demos and labs, go to:
+There were not any demos specific to APIC-EM at the time this Learning Lab was released, but you might look there for other related topics, or for demos released after this Learning Lab was released. To learn more about dCloud, and to search for demos and labs, go to:
 [https://dcloud.cisco.com](https://dcloud.cisco.com)
 
 ## Blogs, Communities, and Other Options
