--- a/labs/add-apic-home/6.md
+++ b/labs/add-apic-home/6.md
@@ -1,6 +1,6 @@
 
-#  Reasons to APIC-EM at Home
-Really, you can learn a lot with APIC-EM in DevNet without installing it at home. When you are thinking about whether it is time for you to add APIC-EM to your lab, think about these good reasons to install it at home: 
+#  Reasons for APIC-EM at Home
+You can learn a lot with APIC-EM in DevNet without installing it at home. When you are thinking about whether it is time for you to add APIC-EM to your lab, think about these good reasons to install it at home: 
 
 ## Topology and Configuration Advantages
 With your own home lab, you get complete control of what network devices to use, the topology to use, and the configurations. In Learning Labs, the network device configuration and topology are set. In the Sandboxes that use real/virtual network device instances, you can change the device configurations, but the topology remains the same. In short, you probably have more flexibility with the network topology and configuration in your home lab. 
