--- a/labs/add-apic-home/7.md
+++ b/labs/add-apic-home/7.md
@@ -3,13 +3,14 @@
 The best news about adding APIC-EM to your home lab is that you can download APIC-EM for free, fully licensed. This page walks through the basics, but literally, you could be downloading all the software you need with about five minutes of navigating at Cisco.com. 
 
 ##  Downloading APIC-EM Software
-Cisco delivers APIC-EM software as a disk image – an ISO    https://en.wikipedia.org/wiki/ISO_image   – that you download from Cisco’s support site. As a result, the process is simple: You find the latest release (or the release that you want), click a few times, and wait while the large file downloads.
+Cisco delivers APIC-EM software as a disk image – [an ISO](https://en.wikipedia.org/wiki/ISO_image)     – that you download from Cisco’s support site. As a result, the process is simple: You find the latest release (or the release that you want), click a few times, and wait while the large file downloads.
 
 [Download APIC-EM Here](https://developer.cisco.com/fileMedia/download/ff4eb410-6a49-40b7-ba27-ce4685c54254)!  
 
 As for the version to download, the right answer will vary over time. So far, Cisco has released about three new versions of APIC-EM per year. Additionally, some Beta versions of different apps may appear over time as well. So, if unsure of a good version to use, you might try asking in the DevNet APIC-EM forum for recommendations. However, given that you are installing it in a home lab, you can just pick the latest release that is clearly not a Beta version of the code. 
 
 You can get to the download page by:
+
 1.	Navigating to cisco.com from your browser
 2.	Choosing Support… downloads from the title menu
 3.	Searching on “APIC-EM”
@@ -25,6 +26,7 @@ The APIC-EM ISO, to date, includes most of the apps. That is, you download the I
 
 ## A Brief Word on the IWAN App
 For licensing purposes, Cisco categorizes APIC-EM apps as: 
+
 - Basic Apps
 - Solutions Apps
 
