--- a/labs/add-apic-home/8.md
+++ b/labs/add-apic-home/8.md
@@ -1,11 +1,12 @@
 
 #  Lab Networking Devices – Beginning Your Analysis
 
-Of the main three decision points about whether to put APIC-EM into your home lab – APIC-EM software, APIC-EM server hardware, and your lab’s network devices, your planning and decisions related to your lab networking devices will require the most work on your part. The last several pages in this DevNet Learning Lab examine the issues and give you the key parts of the puzzle so that you can begin the work of analyzing your lab gear. After that analysis, you should be able to answer questions like: 
+Of the main three decision points about whether to put APIC-EM into your home lab – APIC-EM software, APIC-EM server hardware, and your lab’s network devices – your planning and decisions related to your lab networking devices will require the most work on your part. The last several pages in this DevNet Learning Lab examine the issues and give you the key parts of the puzzle so that you can begin the work of analyzing your lab gear. After that analysis, you should be able to answer questions like: 
 
 - What devices in my current home lab are good enough to be useful with APIC-EM once installed?
 - Where lacking, what could I do to upgrade existing gear to be useful with APIC-EM?
 - Where lacking, what other devices that work with APIC-EM could I use to round out my lab?
+
 Answering those questions requires a little more examination than just looking at one list – albeit a long list – of devices compatible with APIC-EM. 
 
 ## The Issue of Compatibility
@@ -13,11 +14,11 @@ Pause for a moment and think about the long history of Cisco and their networkin
 
 And then think of the task of creating one software package that centralized control of many of those products, products from over the long history of Cisco, and creating one consistent API to access information about those products.
 
-The goals that drove Cisco to give us APIC-EM were both broad and deep. One way Cisco could have made their job much easier would have been to require all its customers to buy newer gear with later and consistent OS versions – but Cisco did not require that. However, at the same time, if Cisco had attempted to support (and test) all their historical device families for APIC-EM – particularly older devices and OS versions – the product may have never reached the market. Certainly, making APIC-EM support all Cisco products from throughout its history would have been ridiculous.
+The goals that drove Cisco to give us APIC-EM were both broad and deep. One way Cisco could have made their job much easier would have been to require all its customers to buy newer gear with later and consistent OS versions – but Cisco did not require that. However, at the same time, if Cisco had attempted to support (and test) all their historical device families for APIC-EM – particularly older devices and OS versions – the product may have never reached the market. Certainly, making APIC-EM support all Cisco products from throughout its history would not have been realistic.
 What does that mean for us when thinking about our networking gear and whether it will work with APIC-EM? Here are some key points which we will explore in the coming pages:
 
 - Cisco publishes lists of compatible hardware and software – that is, hardware and software combinations Cisco believes work with APIC-EM.
-- Based on experience, some other non-listed hardware does work for some APIC-EM features and apps
+- Based on experience, some non-listed hardware does work for some APIC-EM features and apps
 - For home labs, note that many of the older network devices (and therefore cheaper in the used market) are not in APIC-EM’s compatibility lists.
 
 As a result, the devices and software levels listed in the compatibility lists do not include some of the older of the cheaper home lab device options. The figure shows a few of the more common options for enterprise router and switch families.
@@ -26,6 +27,7 @@ As a result, the devices and software levels listed in the compatibility lists d
   
 ## Where to Begin Your Own Lab Analysis: Network Visibility Compatibility List
 To get started, go ahead and open another browser tab to look at [this document](http://www.cisco.com/c/en/us/td/docs/cloud-systems-management/application-policy-infrastructure-controller-enterprise-module/1-4-x/network_visibility/supported-platforms/b_netvis_supported_devices_1-4-x.html#concept_t2v_zff_5y). Search for the section that lists long tables of compatible hardware, just a few pages into the document.
+
 That document details compatibility information about the APIC-EM app called the “Cisco Network Visibility Application”. This app can be a little difficult to find sometimes, because it does not show up as a separate single app in the APIC-EM GUI. In fact, none of the icons in the APIC-EM GUI go by that name. That app name references a few of APIC-EM’s core features, particularly the Discovery and Topology apps, as shown in the figure.
 
 ![alt text](/posts/files/home-lab-network/assets/images/apic-15.png)
