--- a/labs/home-setup/4.md
+++ b/labs/home-setup/4.md
@@ -17,8 +17,7 @@ The APIC-EM installation guide for version 1.4.1.x lists three supported server 
 In case you have not looked at Cisco servers before as part of your job, a couple of tips can help you sift through the meaning.  In the product names, note that the three listed models begin with “C”, which for Cisco UCS servers means they are rack mounted servers. (B-series servers are blade servers.) Also, all three of these models end in S, which means that they use small form factor (SFF) disk drive bays, accommodating 2.5 inch drives. Sometimes, a matching L model (long form factor, or LFF) exists, with practically the same specifications as the similar S model, other than the L model using 3.5-inch drive bays.
 
 ## Example Server Configuration that Meets All APIC-EM Requirements
-You could create a configuration for a Cisco UCS C220 M4S on your own by using Cisco’s Commerce tool (https://apps.cisco.com/Commerce/guest), Or you could call your favorite Cisco reseller (or find one here: (www.cisco.com/go/partnerlocator/ )). Of course, for comparison, you can use the UCS server configuration linked here:
-LINK TBD
+You could create a configuration for a Cisco UCS C220 M4S on your own by using [Cisco’s Commerce tool](https://apps.cisco.com/Commerce/guest), Or you could call your favorite Cisco reseller (or find one [here](https://www.cisco.com/go/partnerlocator/)). 
 
 - Model: The UCS C220 M4S chassis
 - Processor: An [Intel E5-2620 CPU](http://ark.intel.com/products/64594/Intel-Xeon-Processor-E5-2620-15M-Cache-2_00-GHz-7_20-GTs-Intel-QPI).  As with all options chosen for this configuration, it was the cheapest option that met the minimum requirement (6 cores). Note that it has 12 threads.
