--- a/labs/home-setup/5.md
+++ b/labs/home-setup/5.md
@@ -1,6 +1,6 @@
 
 # APIC-EM on a Generic Rack Server Hardware – Example 1
-This next page makes a pair of useful comparisons to the supported UCS hardware by looking at options with custom white-box rack mount servers. Using a rack mount server has some advantages in home lab, particularly if you already put most of your networking and other lab devices into a rack. A single rack unit (1U) server can have plenty of power as your APIC-EM server. And while Cisco UCS servers are hugely popular in enterprise data centers, using a white-box server in your home lab, to save a few dollars, can make good sense. The rest of this page of the Learning Lab looks at some options.
+This page makes a pair of useful comparisons to the supported UCS hardware by looking at options with custom white-box rack mount servers. Using a rack mount server has some advantages in home lab, particularly if you already put most of your networking and other lab devices into a rack. A single rack unit (1U) server can have plenty of power as your APIC-EM server. And while Cisco UCS servers are hugely popular in enterprise data centers, using a white-box server in your home lab, to save a few dollars, can make good sense. The rest of this page of the Learning Lab looks at some options.
 
 ## Repeating the APIC-EM Requirements
 To begin the comparisons, this page starts again with the same APIC-EM hardware requirements discussed for UCS servers. The only requirement removed for this first white-box configuration comparison is that the server itself no longer has to be a UCS server. The figure repeats the key requirements:
