--- a/labs/home-setup/6.md
+++ b/labs/home-setup/6.md
@@ -1,6 +1,6 @@
 
 # APIC-EM on a Generic Rack Server Hardware – Example 2
-While the APIC-EM install docs do happen to list that minimum processor speed of 2.4 GHz, the clock speed of the processor is just one factor that determines the amount of work a processor can perform. You personally could spend time researching CPU benchmarks to try and find the very fastest CPU. But you also want to get on with the work of installing APIC-EM in your lab, so there is a probably a happy medium between the two. This next topic gives a little insight into the topic without taking us too far down that path.
+While the APIC-EM install docs list that minimum processor speed of 2.4 GHz, the clock speed of the processor is just one factor that determines the amount of work a processor can perform. You personally could spend time researching CPU benchmarks to try and find the very fastest CPU. But you also want to get on with the work of installing APIC-EM in your lab, so there is a probably a happy medium between the two. This next topic gives a little insight into the topic without taking us too far down that path.
 
 ## Comparing Processors
 Given that clock speed is just one factor impacting CPU performance, the first APIC-EM requirement that you might choose to relax might be that processor speed. Rather than drag through a long discussion of benchmarks, take this example. 
@@ -16,6 +16,7 @@ As you might expect, the v4 processor has a better performance benchmark than th
 
   
 If you want to do a little research on the processors, this link is a great place to look to [compare Intel processors](https://ark.intel.com/Search/FeatureFilter?productType=processors). For servers that would be in the range of what you’d use for APIC-EM, or for a more general network programmability server platform, when searching, consider filtering your search for the 6-12 core range, and probably ignore processors that didn’t support virtualization (aka that did not support multiple threads per CPU).
+
 Of course, using a server that has less CPU per the stated APIC-EM requirements is a risk, so consider that when choosing where to spend your money on a server.
 
 ## Disk Capacity, Disk Speed, and RAM
