--- a/labs/home-setup/7.md
+++ b/labs/home-setup/7.md
@@ -8,9 +8,10 @@ APIC-EM will work with less CPU than listed in the APIC-EM Installation docs, bu
 That strategy of course begs a question: how much hardware is enough for APIC-EM in your home lab?
 
 First, there is a [post in the DevNet APIC-EM community](https://communities.cisco.com/thread/82355) that gives us all a place to discuss the idea of what people have used successfully for an APIC-EM home lab. We started this thread to help drive the conversation. In effect, the answer is that you can use whatever works. Hopefully, over time, that thread and others can help us all by listing people have successfully used in lab.
-Also, thinking in terms of Intel’s server (XEON) and desktop/laptop Core series (I3/I5/I7), some of the Intel I3/5/7 series support several cores as well as two threads per core. In fact, the Intel I7-6770HQ    http://ark.intel.com/products/93341/Intel-Core-i7-6770HQ-Processor-6M-Cache-up-to-3_50-GHz  has 4 cores with 8 threads, and finishes well in some benchmarks compared to the XEON E5-2620v4, which was featured in one of the rack-mount servers in the previous page.
 
-The downside? As of the time this DevNet Learning Lab was published, the Intel Core series maxed out at 4 physical cores, which does not meet the literal requirements listed for APIC-EM. But if you might be willing to try less CPU, for less money, and see if it works for your needs, it is worth looking at the options. And that is what this page examines.
+Also, thinking in terms of Intel’s server (XEON) and desktop/laptop Core series (I3/I5/I7), some of the Intel I3/5/7 series support several cores as well as two threads per core. In fact, the [Intel I7-6770HQ](http://ark.intel.com/products/93341/Intel-Core-i7-6770HQ-Processor-6M-Cache-up-to-3_50-GHz ) has 4 cores with 8 threads, and finishes well in some benchmarks compared to the XEON E5-2620v4, which was featured in one of the rack-mount servers in the previous page.
+
+The downside? As of the time this DevNet Learning Lab was published, the Intel Core series maxed out at 4 physical cores, which does not meet the literal requirements listed for APIC-EM. But if you might be willing to try less CPU, for less money, and see if it works for your needs, it is worth looking at the options. 
 
 ## Do Not Skimp on Both CPU Cores and Disk Speed
 As you might expect, there is a low enough amount of CPU, RAM, disk space, and disk speed for which any software system would simply not work at all, or work so poorly as to be useless. However, the idea with this exercise is to determine if you could save some money on a few of the requirements, could the system still work.
@@ -39,7 +40,7 @@ When looking for a good NUC for APIC-EM, you want to look for kits with the bett
 
 ![alt text](/posts/files/home-lab-network/assets/images/apic-30.png ) 
  
-The [Intel NUC “Skull Canyon” (NUC6I7KYK)](http://www.intel.com/content/www/us/en/products/boards-kits/nuc/kits/nuc6i7kyk.html) may be the best fit for APIC-EM as of the release of this Learning Lab. It supports 32G, and comes with the [6th generation Intel Core I7-6770 ](http://ark.intel.com/products/93341/Intel-Core-i7-6770HQ-Processor-6M-Cache-up-to-3_50-GHz)      processor. The processor has 4 cores/8 threads with a base clock rate of 2.6 GHz. 
+The [Intel NUC “Skull Canyon” (NUC6I7KYK)](http://www.intel.com/content/www/us/en/products/boards-kits/nuc/kits/nuc6i7kyk.html) may be the best fit for APIC-EM as of the release of this Learning Lab. It supports 32G, and comes with the [6th generation Intel Core I7-6770 ](http://ark.intel.com/products/93341/Intel-Core-i7-6770HQ-Processor-6M-Cache-up-to-3_50-GHz) processor. The processor has 4 cores/8 threads with a base clock rate of 2.6 GHz. 
 
 Of course, the biggest downside is that it does not meet the stated requirement for 6 cores.
 
