--- a/labs/add-apic-home/1.md
+++ b/labs/add-apic-home/1.md
@@ -5,6 +5,7 @@
 - Identify APIC-EM learning options at DevNet and other related services
 - List pros and cons for adding APIC-EM to your home lab
 - Understand APIC-EM software and app options
+- Understand and find the different lists of supported Cisco networking devices, based on the different APIC-EM apps
 - Begin the analysis of your own lab gear’s usefulness to be used with APIC-EM once installed
 
 ## Prerequisites
@@ -38,15 +39,9 @@ Why pick APIC-EM to begin this DevNet Learning Track? APIC-EM is a useful tool u
 
 Why APIC-EM to begin this DevNet Learning Track? APIC-EM is a useful tool unto itself, but also it is particularly useful for learning about network programmability and APIs. Additionally, it works with the networking devices that many networkers are familiar with, which makes it a natural fit into a traditional networker’s skill set. Beyond that, you have some work to do before choosing whether to even bother to add APIC-EM to your home lab. If you then choose to install it, you have some analysis, planning, and budgeting to do. This module of Learning Labs looks at some of these issues.
 
-## Assumptions in this DevNet Learning Lab and Module 
 ## Assumptions in this DevNet Learning Lab and Module
 The DevNet Learning Labs in this module make some key assumptions that drive the topics the lab examines and the topics it mostly ignores. The assumptions:
 
-- Home not Work: The context is for your home lab, not for a lab at work that is connected to your enterprise network. While some of this Learning Lab’s discussions may be useful when building a lab at work, the home lab assumption drives the choices.  
-- Low Cost: For anything that requires purchase, the prices should be at least possible for an individual’s budget rather than a company’s budget.
-- Licenses: Look for options that allow permanent use or trial use of software for free.
-- Your Motivation: Personal learning and certification learning.
-- Primary Learning Goal: This Learning Lab assumes your primary interest is network programmability. APIC-EM as an end to itself may be a close second.
 - **Home not Work:** The context is for your home lab, not for a lab at work that is connected to your enterprise network. While some of this Learning Lab’s discussions may be useful when building a lab at work, the home lab assumption drives the choices.  
 - **Low Cost:** For anything that requires purchase, the prices should be at least possible for an individual’s budget rather than a company’s budget.
 - **Licenses:** Look for options that allow permanent use or trial use of software for free.
