--- a/labs/add-apic-home/7.md
+++ b/labs/add-apic-home/7.md
@@ -11,6 +11,7 @@ Cisco delivers APIC-EM software as a disk image – an [ISO](https://en.wikipedi
 
 [Download APIC-EM Here](https://developer.cisco.com/fileMedia/download/ff4eb410-6a49-40b7-ba27-ce4685c54254)!  
 
+As for the version to download, the right answer will vary over time. So far, Cisco has released about three new versions of APIC-EM per year. Additionally, some Beta versions of different apps may appear over time as well. So, if unsure of a good version to use, you might try asking in the DevNet APIC-EM forum for recommendations. However, given that you are installing it in a home lab, you can just pick the latest release that is clearly not a Beta version of the code.
 
 You can get to the download page by:
 
@@ -21,7 +22,6 @@ You can get to the download page by:
 The next figure shows a copy of an APIC-EM download. Of note, the user had clicked for version 1.4 on the left, which revealed the list of downloadable images on the right. The user was hovering over one image, causing a pop-up window to give more detail. Of course, clicking the download button on the right initiates the download.
 
 ![alt text](/posts/files/home-lab-network/assets/images/apic-12.png)
-  
 
 ##  APIC-EM Apps and Licenses
 The APIC-EM ISO, to date, includes most of the apps. That is, you download the ISO, install from the ISO, and most all the apps are installed as part of the process. These included apps, called Basic Apps in Cisco’s licensing documents, are licensed and require no action on your part. The figure shows the Basic Apps available as part of the APIC-EM 1.4.x releases:
@@ -53,5 +53,4 @@ If you are marching towards APIC-EM installation, you may as well go ahead and d
 - Find the latest generally-available release (or choose your preferred release)
 - Download the ISO file (probably in the 4 GB size range or more)
 - Also download the matching signature file
-- Once downloaded, set these two files aside in a directory where you can find them once you begin the installation process. 
 - Once downloaded, set these two files aside in a directory where you can find them once you begin the installation process.
