copyedits and merge conflicts

--- a/labs/add-apic-home/1.md
+++ b/labs/add-apic-home/1.md
@@ -9,33 +9,15 @@
 - Begin the analysis of your own lab gear’s usefulness to be used with APIC-EM once installed
 
 ## Prerequisites
-<<<<<<< HEAD
-To perform this lab, you need only yourself and a web browser with Internet connectivity.
- 
-=======
-To perform this DevNet Learning Lab, you need only yourself and a web browser with Internet connectivity.
 
->>>>>>> 7e1be3eeb69da49507b59703ee7ce4d6ed90598c
+To perform this lab, you need only yourself and a web browser with Internet connectivity.
+
 ## Your Home Lab, APIC-EM, and Network Programmability
 Networkers have been building their own home labs for many years, typically for building their skills, or for getting ready for certification tests. You hear of people borrowing gear from work to bring home, or buying older (cheaper) used gear to build their home labs. Those labs often have some routers and switches, plus the devices and software related to whatever technology that person might be studying.
 
-<<<<<<< HEAD
-Take that a step further into the world of network programmability with Cisco products:
-What should an engineer do in their home lab to make it a good learning environment for learning about network programmability? 
-=======
 Now take that a step further into the world of network programmability with Cisco products:
 
-> What should an engineer do in their home lab to make it a good learning environment for learning about network programmability?
->>>>>>> 7e1be3eeb69da49507b59703ee7ce4d6ed90598c
-
-This lab examines examines three related topics, as shown in the left side of the figure:
-
 ![alt text](/posts/files/home-lab-network/assets/images/apic-1.png)
-
-<<<<<<< HEAD
-Why pick APIC-EM to begin this DevNet Learning Track? APIC-EM is a useful tool unto itself, but also it is particularly useful for learning about network programmability and APIs. Additionally, it works with the networking devices that many networkers are familiar with, which makes it a natural fit into a traditional networker’s skill set. Beyond that, you have some work to do before choosing whether to even bother to add APIC-EM to your home lab. If you then choose to install it, you have some analysis, planning, and budgeting to do. This module of Learning Labs looks at some of these issues. 
-=======
->>>>>>> 7e1be3eeb69da49507b59703ee7ce4d6ed90598c
 
 Why APIC-EM to begin this DevNet Learning Track? APIC-EM is a useful tool unto itself, but also it is particularly useful for learning about network programmability and APIs. Additionally, it works with the networking devices that many networkers are familiar with, which makes it a natural fit into a traditional networker’s skill set. Beyond that, you have some work to do before choosing whether to even bother to add APIC-EM to your home lab. If you then choose to install it, you have some analysis, planning, and budgeting to do. This module of Learning Labs looks at some of these issues.
 
@@ -50,9 +32,6 @@ The DevNet Learning Labs in this module make some key assumptions that drive the
 
 
 ##  Is This You?
-<<<<<<< HEAD
-In short, this Learning Lab expects that you want to obtain APIC-EM software, run it on some server, and use it with your home lab’s network. The end goal is learning – about APIC-EM itself, its northbound APIs, and about programming to use those APIs. If that sounds like you, read on!
 
-=======
-In short, this Learning Lab expects that you want to obtain APIC-EM software, run it on some server, and use it with your home lab’s network. The end goal? Learning – about APIC-EM itself, its northbound APIs, and about programming to use those APIs. If that sounds like you, read on!
->>>>>>> 7e1be3eeb69da49507b59703ee7ce4d6ed90598c
+In short, the expectation behind this lab is that you want to obtain APIC-EM software, run it on some server, and use it with your home lab’s network. The end goal is learning – about APIC-EM itself, its northbound APIs, and about programming to use those APIs. If that sounds like you, read on!
+
