--- a/labs/add-apic-home/2.md
+++ b/labs/add-apic-home/2.md
@@ -2,8 +2,6 @@
 # Learning Programmability and APIC-EM with Existing DevNet Learning Labs
 If your goal is to learn about APIC-EM, its APIs, and about network programmability using APIC-EM, then installing APIC-EM at home is probably your fourth or fifth step in that process. You should start by learning what you can using other free tools, and then deciding whether you want to install it in your home lab. For some people, you may learn all you care to learn without taking the time and expense to install APIC-EM at home.
 
-Simple enough.
-
 So, the first step in thinking about adding APIC-EM to your home lab is to think about whether you need to bother or not. The next page of this Learning Lab details some of those learning options in case you’ve not seen them before.
 
 ## Network Programmability Learning Track
@@ -12,7 +10,8 @@ DevNet organizes many of the Learning Labs into learning tracks. Each Learning T
 ![alt text](/posts/files/home-lab-network/assets/images/apic-2.png)
 
 For instance, the Network Programmability Learning Track has several APIC-EM labs. To see the various Learning Tracks:
-1.	Browse to Developer.cisco.com
+
+1.	Browse to [developer.cisco.com](https://developer.cisco.com)
 2.	Choose the top menu item “Discover”, and choose “Learning Tracks”
 
 That process should navigate your browser to a page similar to the one shown in the next figure, from which you could select the Network Programmability Learning Track.
@@ -20,27 +19,19 @@ That process should navigate your browser to a page similar to the one shown in 
 ![alt text](/posts/files/home-lab-network/assets/images/apic-3.png)
 
 ## All APIC-EM Labs
-<<<<<<< HEAD
+
 You can also navigate to any DevNet Learning Lab directly, ignoring the Learning Tracks. For instance, to find labs tagged as having some APIC-EM content, you can browse to [learninglabs.cisco.com/labs]( https://learninglabs.cisco.com/labs) and then either:
+
 1. Type “APIC-EM” in the search box in the upper right
 1. Click category “APIC-EM” on the left
-=======
-You can also navigate to any DevNet Learning Lab directly, ignoring the Learning Tracks. For instance, to find labs tagged as having some APIC-EM content, you can:
-1.	Browse to learninglabs.cisco.com/labs,  https://learninglabs.cisco.com/labs and then either:
-a.	Type “APIC-EM” in the search box in the upper right
-b.	Click category “APIC-EM” on the left
 
->>>>>>> 7e1be3eeb69da49507b59703ee7ce4d6ed90598c
 The next figure points out the locations.
 
 ![alt text](/posts/files/home-lab-network/assets/images/apic-4.png)
 
 ## What You Get with Existing DevNet Learning Labs about APIC-EM
-<<<<<<< HEAD
+
 Each of these DevNet Learning Labs gives you a sequence of scripted steps to help you learn something useful, typically in around 20 minutes. Think of them like lab exercises in a class, but also with enough material from the course to go along with the lab activities so that you can do the lab by yourself without any help. 
-=======
-Each of these DevNet Learning Labs gives you a sequence of scripted steps to help you learn something useful, typically in around 20 minutes. Think of them like lab exercises in a class, but also with enough material from the course (words and figures) to go along with the lab activities so that you can do the lab by yourself without any help.
->>>>>>> 7e1be3eeb69da49507b59703ee7ce4d6ed90598c
 
 Some of the strengths of the Learning Labs are:
 
