--- a/labs/add-apic-home/3.md
+++ b/labs/add-apic-home/3.md
@@ -24,8 +24,7 @@ The next figure shows the topology for this Sandbox, with each rectangle with a 
 
 ![alt text](/posts/files/home-lab-network/assets/images/apic-7.png)
 
-To navigate to the DevNet APIC-EM Sandboxes, you can start at [developer.cisco.com](https://developer.cisco.com), navigate to the Sandbox area, and look for networking Sandboxes. To get there directly and more quickly, just go to 
-[https://devnetsandbox.cisco.com](https://devnetsandbox.cisco.com)
+To navigate to the DevNet APIC-EM Sandboxes, you can start at [developer.cisco.com](https://developer.cisco.com), navigate to the Sandbox area, and look for networking Sandboxes. To get there directly and more quickly, just go to [https://devnetsandbox.cisco.com](https://devnetsandbox.cisco.com)
 
 Once logged in at the page for devnetsandbox.cisco.com, you should see a screen like the next figure. To find the APIC-EM Sandboxes, you can:
 
