June 21 - small changes by Wendell before first publish
I changed in lab 1: pages 1.md and 8.md. In lab 2, pages 4.md and 8.md.

--- a/labs/add-apic-home/1.md
+++ b/labs/add-apic-home/1.md
@@ -16,6 +16,10 @@ To perform this lab, you need only yourself and a web browser with Internet conn
 Networkers have been building their own home labs for many years, typically for building their skills, or for getting ready for certification tests. You hear of people borrowing gear from work to bring home, or buying older (cheaper) used gear to build their home labs. Those labs often have some routers and switches, plus the devices and software related to whatever technology that person might be studying.
 
 Now take that a step further into the world of network programmability with Cisco products:
+>What should an engineer do in their home lab to make it a good learning environment for learning about network programmability?
+ 
+The DevNet Learning Labs in this DevNet Learning Track examine this question. This Learning Track will have multiple Learning Modules, each with multiple Learning Labs. This Learning Lab examines three related topics, as shown in the left side of the figure:
+
 
 ![alt text](/posts/files/add-apic-home/assets/images/apic-1.png)
 
@@ -34,4 +38,3 @@ The DevNet Learning Labs in this module make some key assumptions that drive the
 ##  Is This You?
 
 In short, the expectation behind this lab is that you want to obtain APIC-EM software, run it on some server, and use it with your home lab’s network. The end goal is learning – about APIC-EM itself, its northbound APIs, and about programming to use those APIs. If that sounds like you, read on!
-
