--- a/labs/home-setup/4.md
+++ b/labs/home-setup/4.md
@@ -18,7 +18,7 @@ In case you have not looked at Cisco servers before as part of your job, a coupl
 
 ## Example Server Configuration that Meets All APIC-EM Requirements
 
-You could create a configuration for a Cisco UCS C220 M4S on your own by using [Cisco’s Commerce tool](https://apps.cisco.com/Commerce/guest), Or you could call your favorite Cisco reseller (or find one [here](https://www.cisco.com/go/partnerlocator/)). 
+You could create a configuration for a Cisco UCS C220 M4S on your own by using [Cisco’s Commerce tool](https://apps.cisco.com/Commerce/guest), or you could call your favorite Cisco reseller (or find one [here](https://www.cisco.com/go/partnerlocator/)). 
 
 - **Model:** The UCS C220 M4S chassis
 - **Processor:** An [Intel E5-2620 CPU](http://ark.intel.com/products/64594/Intel-Xeon-Processor-E5-2620-15M-Cache-2_00-GHz-7_20-GTs-Intel-QPI).  As with all options chosen for this configuration, it was the cheapest option that met the minimum requirement (6 cores). Note that it has 12 threads.
